Update index.html in mp1 folder

--- a/mp1/index.html
+++ b/mp1/index.html
@@ -300,10 +300,30 @@
       </div>
     </section>
 
+    <section id="fan-thoughts" class="container my-5">
+      <h2 class="text-center mb-4">Why I Love Kurzgesagt</h2>
+      <div class="card bg-dark text-white p-4">
+        <blockquote class="blockquote text-center">
+          <p class="mb-4" style="font-size: small;">
+            I first found Kurzgesagt through my ex. He introduced me to this. I
+            wasn't really a fan of watching YouTube videos but I guess thanks to
+            him I now have a <i>'cool'</i> interest. This been a source of
+            endless inspiration ever since. Their videos not only spark
+            curiosity but also present science and humanity in the most
+            captivating ways. It’s more than just a YouTube channel – it’s a
+            journey of understanding the universe and ourselves.
+          </p>
+          <footer class="blockquote-footer text-warning">
+            A devoted fan, always learning
+          </footer>
+        </blockquote>
+      </div>
+    </section>
+
     <footer class="bg-dark text-white py-5">
       <div class="container">
         <div class="mb-4">
-          <h5>About Us</h5>
+          <h5>About Kurzgesagt</h5>
           <p>
             We’re a team of illustrators, animators, number crunchers, and one
             dog who aim to spark curiosity about science and the world we live
