Update index.html in mp1 folder

--- a/mp1/index.html
+++ b/mp1/index.html
@@ -136,12 +136,15 @@
       ></iframe>
     </div>
     <div class="text-center mt-3">
-      <h1>The Egg - A Short Story</h1>
-      <p>
-        <strong>Chef:</strong> How do you like your eggs? <br />
-        <strong>Me:</strong> <i>Existential</i>
-      </p>
-    </div>
+        <p>
+            <i><strong>The Ultimate Favorite</strong></i>
+        </p>
+        <h1>The Egg - A Short Story</h1>
+        <p>
+          <strong>Chef:</strong> How do you like your eggs? <br />
+          <strong>Me:</strong> <i>Existential</i>
+        </p>
+      </div>
 
     <section id="videos" class="container my-5">
       <h2 class="text-center mb-4 animate__animated animate__slideInUp">
