--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
           </div>
           <div class="col-md-4">
             <a href="mp1/index.html" target="_blank" class="activityBtn">
-              New Activity
+              Kurzgesagt
             </a>
           </div>
         </div>
