--- a/act1/index.html
+++ b/act1/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,15 +13,38 @@
             width: 100%;
             height: auto;
         }
+
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .btn-custom {
+            background-color: #4CAF50; 
+            color: white; 
+            font-size: 18px; 
+            padding: 12px 24px; 
+            border-radius: 5px; 
+            text-decoration: none; 
+        }
+
+        .btn-custom:hover {
+            background-color: #45a049; 
+            transition: background-color 0.3s ease; 
+        }
     </style>
 </head>
 
 <body>
     <div class="container-fluid p-0">
         <img src="5.png" alt="First Image" class="fullWidthImage">
-
         <img src="6.png" alt="Second Image" class="fullWidthImage">
     </div>
+    
+    <div class="button-container">
+        <a href="index.html" class="btn-custom">Back to Homepage</a>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
