--- a/act1/index.html
+++ b/act1/index.html
@@ -42,7 +42,7 @@
     </div>
     
     <div class="button-container">
-        <a href="index.html" class="btn-custom">Back to Homepage</a>
+        <a href="https://mariari-chickennuggets.github.io/mariari-chickennuggets/" class="btn-custom">Back to Homepage</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
