--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
       .navbar {
         background-color: #133e87;
       }
+      .navbar-toggler {
+        border-color: rgba(
+          255,
+          255,
+          255,
+          0.5
+        ); 
+      }
+      .navbar-toggler-icon {
+        background-color: white;
+      }
 
       .navbar-brand,
       .nav-link {
@@ -229,7 +240,7 @@
               <a class="nav-link" href="index.html">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html"> Projects</a>
+              <a class="nav-link" href="index.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html">Connect</a>
@@ -401,10 +412,6 @@
       </div>
     </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s"
-    ></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const spotifyToggle = document.getElementById("spotify-toggle");
