--- a/index.html
+++ b/index.html
@@ -77,18 +77,6 @@
       .navbar {
         background-color: #133e87;
       }
-      .navbar-toggler {
-        border-color: rgba(
-          255,
-          255,
-          255,
-          0.5
-        ); 
-      }
-      .navbar-toggler-icon {
-        background-color: white;
-      }
-
       .navbar-brand,
       .nav-link {
         color: #f3f3e0 !important;
@@ -221,7 +209,7 @@
             alt="Logo"
             style="width: 45px; height: 45px; margin-right: 10px"
           />
-          MariaRi ChickenNuggets
+          MariaRi
         </a>
         <button
           class="navbar-toggler"
