--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             alt="Logo"
             style="width: 45px; height: 45px; margin-right: 10px"
           />
-          MariaRi
+          MariaRi ChickenNuggets
         </a>
         <button
           class="navbar-toggler"
