--- a/index.html
+++ b/index.html
@@ -83,10 +83,6 @@
         font-family: "Montserrat", sans-serif;
       }
 
-      .navbar-nav .nav-link:hover {
-        color: #cbdceb !important;
-      }
-
       .navbar-brand-custom {
         font-family: "Sour Gummy", serif;
         font-optical-sizing: auto;
@@ -211,30 +207,6 @@
           />
           MariaRi ChickenNuggets
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Connect</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </nav>
 
@@ -267,7 +239,7 @@
           <div class="col-md-4 text-center">
             <img
               src="frog_about.png"
-              alt="Maria's Picture"
+              alt="frog"
               class="img-fluid rounded"
               style="max-width: 100%; height: auto"
             />
