--- a/index.html
+++ b/index.html
@@ -162,8 +162,6 @@
         color: #f3f3e0;
         padding: 20px 0;
         text-align: center;
-        width: 100%;
-        margin-top: auto;
       }
 
       .footer a {
@@ -332,21 +330,8 @@
       </div>
     </div>
 
-    <footer
-      class="footer"
-      style="
-        background-color: #133e87;
-        color: #f3f3e0;
-        padding: 20px 0;
-        text-align: center;
-        width: 100%;
-        margin: 0;
-        position: relative;
-        left: 0;
-        bottom: 0;
-      "
-    >
-      <div class="container" style="margin: 0; padding: 0">
+    <footer>
+      <div class=" footer">
         <p>Made with ❤️ by Maria Jessica Laurel</p>
         <p>
           <a
